chore: add application parameters for development and production

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+# Spring Application Name
 spring.application.name=workshop-n-gine-platform
+
+# Spring Profile Configuration
+spring.profiles.active=dev
+
+# Spring Path Configuration
+spring.mvc.servlet.path=/api/v1
+
+# Spring Data JPA Configuration
+spring.jpa.show-sql=true
+
+# Spring Data JPA Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+# TODO: Add Physical Naming Strategy
