--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,4 +13,4 @@ spring.jpa.show-sql=true
 # Spring Data JPA Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.naming.physical-strategy=com.yarasoftware.workshopngine.platform.shared.infrastructure.persistence.jpa.SnakeCasePhysicalNamingStrategy
+spring.jpa.hibernate.naming.physical-strategy=com.yarasoftware.workshopngine.platform.shared.infrastructure.persistence.jpa.strategy.SnakeCasePhysicalNamingStrategy
