--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 # Spring Datasource Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/workshop-n-gine?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=jhosepmyr10
+spring.datasource.password=maxoz9987
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Port Configuration
