chore(config): update Spring application configuration for production environment and set java version to 17

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.application.name=workshop-n-gine-platform
 
 # Spring Profile Configuration
-spring.profiles.active=dev
+spring.profiles.active=pdn
 
 # Spring Path Configuration
 spring.mvc.servlet.path=/api/v1
