--- a/src/main/resources/application-pdn.properties
+++ b/src/main/resources/application-pdn.properties
@@ -1,8 +1,8 @@
 # Spring Datasource Configuration
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://autorack.proxy.rlwy.net:32834/workshop-n-gine?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=mgasafbcfcAkpnuWgaYcaLkpYFJMNHSQ
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Port Configuration
-server.port=
+server.port=8080
