--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,8 +1,8 @@
 # Spring Datasource Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/workshop-n-gine?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://autorack.proxy.rlwy.net:32834/workshop-n-gine?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=maxoz9987
+spring.datasource.password=mgasafbcfcAkpnuWgaYcaLkpYFJMNHSQ
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Port Configuration
-server.port=8081
+server.port=8080
