--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.naming.physical-strategy=com.yarasoftware.workshopngine.platform.shared.infrastructure.persistence.jpa.strategy.SnakeCasePhysicalNamingStrategy
+
+# JWT Configuration properties
+authorization.jwt.secret=WriteHereYourSecretStringForTokenSigningCredentials
+authorization.jwt.expiration.days=7
